--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <div id="password-criteria">
+          <label for="password-length">Password Length (8-128):</label>
+<input type="number" id="password-length" name="password-length" min="8" max="128" value="8"><br>
+
+          <h4>Password Character Types:</h4>
+          <input type="checkbox" id="lower" name="lower" value="lower" checked>
+          <label for="lower"> Lowercase</label><br>
+          <input type="checkbox" id="upper" name="upper" value="upper" checked>
+          <label for="upper"> Uppercase</label><br>
+          <input type="checkbox" id="numeric" name="numeric" value="numeric">
+          <label for="numeric"> Numeric</label><br>
+          <input type="checkbox" id="special" name="special" value="special">
+          <label for="special"> Special Characters</label><br>
+
+        </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
